--- a/ipynb/Ciffar-image-Classification.ipynb
+++ b/ipynb/Ciffar-image-Classification.ipynb
@@ -68,11 +68,13 @@
     "def DistanceCalculation(training_data, validation_data):\n",
     "    distances = np.zeros((40000, 10000))\n",
     "  \n",
-    "  #Calculating Euclidean distance for every validation image\n",
+    "    #Calculating Euclidean distance for every validation image\n",
     "    for i in range(0,10000):\n",
     "    \n",
     "        for j in range(0,40000):\n",
-    "            distances[j,i] = distances[j,i] + np.sqrt(sum((validation_data[i] - training_data[j])**2))\n",
+    "            \n",
+    "            a = validation_data[i] - training_data[j]\n",
+    "            distances[j,i] = distances[j,i] + np.sqrt(np.dot(a.T,a))\n",
     "            print(f\"({j},{i})\")\n",
     "\n",
     "    np.savetxt(\"distances.csv\", distances, delimiter=\",\")\n",
@@ -88,7 +90,7 @@
     "def DistanceCalculationWithNormalization(training_data, validation_data):\n",
     "    norm_distances = np.zeros((40000, 10000))\n",
     "  \n",
-    "  #Calculating Euclidean distance for every validation image\n",
+    "  #Calculating Euclidean distance for every validation image with normalization\n",
     "    for i in range(0,10000):\n",
     "        val_mean = validation_data[i].mean()\n",
     "        val_std = validation_data[i].std()\n",
@@ -98,8 +100,10 @@
     "            train_mean = training_data[j].mean()\n",
     "            train_std = training_data[j].std()\n",
     "            normalized_train = (training_data[j] - train_mean)/train_std\n",
-    "            norm_distances[j,i] = norm_distances[j,i] + np.sqrt(sum(((normalized_val - normalized_train)**2)))\n",
-    "    \n",
+    "            a = normalized_val - normalized_train\n",
+    "            norm_distances[j,i] = norm_distances[j,i] + np.sqrt(np.dot(a.T,a))\n",
+    "            print(f\"({j},{i})\")\n",
+    "            \n",
     "    np.savetxt(\"Normdistances.csv\", norm_distances, delimiter=\",\")\n",
     "    return norm_distances"
    ]
@@ -111,20 +115,29 @@
    "outputs": [],
    "source": [
     "def KfoldValidation(distances,training_lables, validation_labels,k):\n",
-    "    #sorting the distances and finding K smallest distances and their indices\n",
-    "    sorted_distances = np.argsort(distances, axis=0)\n",
-    "    Ksmallest_distances = sorted_distances[0:k, ]\n",
+    "  \n",
+    "    #sorting the distances \n",
+    "    sorted_distances = np.sort(distances, axis=1)\n",
+    "\n",
+    "    #finding the indices of k smallest distances\n",
+    "    sorted_distances_indices = np.argsort(sorted_distances, axis=0)\n",
+    "    Ksmallest_distances_indices = sorted_distances_indices[0:k, ]\n",
     " \n",
-    "    #Finding the labels of K smallest distances and their corresponding labels\n",
+    "    #Finding the labels of K smallest distances using their indices\n",
     "    Ksmallest_labels = np.zeros((k,10000))\n",
     "    for i in range(0,10000):\n",
     "        for j in range(0,k):\n",
-    "            Ksmallest_labels[j,i] = Ksmallest_labels[j,i] + training_labels[Ksmallest_distances[j,i]]\n",
-    "\n",
-    "  #predicted label: most frequent label in k smallest labels\n",
+    "            Ksmallest_labels[j,i] = Ksmallest_labels[j,i] + training_lables[Ksmallest_distances_indices[j,i]]\n",
+    "  \n",
+    "  \n",
+    "  #predicted label: most frequent label in k smallest distances'label\n",
+    "  #argmax(array, axis = None, out = None) : Returns indices of the max element of the array in a particular axis\n",
+    "  #bincount: Count number of occurrences of each value in array of non-negative ints.\n",
     "    predicted_labels = []\n",
     "    for i in range(0,10000):\n",
-    "        predicted_labels.append(np.bincount(Ksmallest_labels[:,i]).argmax())\n",
+    "        a = Ksmallest_labels[:,i].astype(int)\n",
+    "        predicted_labels.append(np.bincount(a).argmax())\n",
+    "  \n",
     "\n",
     "  #comparing our result and calculating accuracy\n",
     "    a = 0\n",
@@ -132,9 +145,9 @@
     "        if predicted_labels[i] == validation_labels[i]:\n",
     "            a = a + 1\n",
     "  \n",
-    "    accuracy = a/10000\n",
+    "  accuracy = a/10000\n",
     "  \n",
-    "    return(accuracy)"
+    "  return (accuracy)\n"
    ]
   },
   {
@@ -193,13 +206,6 @@
     "distance_1 = DistanceCalculation(training_data_1, validation_data_1)\n",
     "distance_1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
