--- a/ipynb/Ciffar-image-Classification.ipynb
+++ b/ipynb/Ciffar-image-Classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,14 @@
     "        if predicted_labels[i] == validation_labels[i]:\n",
     "            a = a + 1\n",
     "  \n",
-    "  accuracy = a/10000\n",
+    "    accuracy = a/10000\n",
     "  \n",
-    "  return (accuracy)\n"
+    "    return (accuracy)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,186 @@
    "outputs": [],
    "source": [
     "distance_1 = DistanceCalculation(training_data_1, validation_data_1)\n",
-    "distance_1"
+    "Acc = []\n",
+    "for i in range(1,21):\n",
+    "\n",
+    "    Acc.append(KfoldValidation(distances = distances_1,training_lables = label_set_1, validation_labels = validate_1_label,k=i))\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - without normalization - set1\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normdistances_1 = DistanceCalculationWithNormalizationValidation(data_set_1,validate_1)\n",
+    "Acc = []\n",
+    "\n",
+    "for i in range(1,21):\n",
+    "    \n",
+    "    Acc.append(KfoldValidation(normdistances_1, label_set_1, validate_1_label, i))\n",
+    "\n",
+    "    \n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - with normalization - set1\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances_2 = DistanceCalculationValidation(data_set_2,validate_2)\n",
+    "Acc = []\n",
+    "\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(distances_2, label_set_2, validate_2_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - without normalization - set2\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normdistances_2 = DistanceCalculationWithNormalizationValidation(data_set_2,validate_2)\n",
+    "Acc = []\n",
+    "\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(normdistances_2, label_set_2, validate_2_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - with normalization - set2\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances_3 = DistanceCalculationValidation(data_set_3,validate_3)\n",
+    "Acc = []\n",
+    "\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(distances_3, label_set_3, validate_3_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - without normalization - set3\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normdistances_3 = DistanceCalculationWithNormalizationValidation(data_set_3,validate_3)\n",
+    "Acc = []\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(normdistances_3, label_set_3, validate_3_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - with normalization - set3\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances_4 = DistanceCalculationValidation(data_set_4,validate_4)\n",
+    "Acc = []\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(distances_4, label_set_4, validate_4_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - without normalization - set4\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normdistances_4 = DistanceCalculationWithNormalizationValidation(data_set_4,validate_4)\n",
+    "Acc = []\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(normdistances_4, label_set_4, validate_4_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - with normalization - set4\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances_5 = DistanceCalculationValidation(data_set_5,validate_5)\n",
+    "Acc = []\n",
+    "for i in range(1,21):\n",
+    "    Acc.append(KfoldValidation(distances_5, label_set_5, validate_5_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - without normalization - set5\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normdistances_5 = DistanceCalculationWithNormalizationValidation(data_set_5,validate_5)\n",
+    "Acc = []\n",
+    "for i in range(1,21):\n",
+    "    \n",
+    "    Acc.append(KfoldValidation(normdistances_5, label_set_5, validate_5_label, i))\n",
+    "\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
+    "plt.title(\"Accuracy vs K value - with normalization - set5\")\n",
+    "plt.xlabel(\"K\")\n",
+    "plt.ylabel(\"Accuracy\")"
    ]
   }
  ],
