adding test functions

--- a/ipynb/Ciffar-image-Classification.ipynb
+++ b/ipynb/Ciffar-image-Classification.ipynb
@@ -385,6 +385,89 @@
     "plt.xlabel(\"K\")\n",
     "plt.ylabel(\"Accuracy\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preparing functions for test\n",
+    "\n",
+    "def DistanceCalculationValidation(training_data, validation_data):\n",
+    "    distances = np.zeros((50000, 10000))\n",
+    "  \n",
+    "  #Calculating Euclidean distance for every validation image\n",
+    "    for i in range(0,10000):\n",
+    "    \n",
+    "        for j in range(0,50000):\n",
+    "            a = validation_data[i] - training_data[j]\n",
+    "            distances[j,i] = distances[j,i] + np.sqrt(np.dot(a.T,a))\n",
+    "            print(f\"({j},{i})\")\n",
+    "    \n",
+    "    np.savetxt(\"distances.csv\", distances, delimiter=\",\")\n",
+    "    return distances\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def DistanceCalculationWithNormalizationValidation(training_data, validation_data):\n",
+    "    norm_distances = np.zeros((50000, 10000))\n",
+    "  \n",
+    "    #Calculating Euclidean distance for every validation image\n",
+    "    for i in range(0,10000):\n",
+    "        val_mean = validation_data[i].mean()\n",
+    "        val_std = validation_data[i].std()\n",
+    "        normalized_val = (validation_data[i] - val_mean)/val_std\n",
+    "    \n",
+    "    for j in range(0,50000):\n",
+    "        train_mean = training_data[j].mean()\n",
+    "        train_std = training_data[j].std()\n",
+    "        normalized_train = (training_data[j] - train_mean)/train_std\n",
+    "        a = normalized_val - normalized_train\n",
+    "        norm_distances[j,i] = norm_distances[j,i] + np.sqrt(np.dot(a.T,a))\n",
+    "        print(f\"({j},{i})\")\n",
+    "\n",
+    "    np.savetxt(\"Normdistances.csv\", norm_distances, delimiter=\",\")\n",
+    "    return norm_distances\n",
+    "\n",
+    "\n",
+    "def KfoldValidation(distances,training_lables, validation_labels,k):\n",
+    "  \n",
+    "    #sorting the distances \n",
+    "    sorted_distances = np.sort(distances, axis=1)\n",
+    "\n",
+    "    #finding the indices of k smallest distances\n",
+    "    sorted_distances_indices = np.argsort(sorted_distances, axis=0)\n",
+    "    Ksmallest_distances_indices = sorted_distances_indices[0:k, ]\n",
+    " \n",
+    "    #Finding the labels of K smallest distances using their indices\n",
+    "    Ksmallest_labels = np.zeros((k,10000))\n",
+    "    for i in range(0,50000):\n",
+    "        for j in range(0,k):\n",
+    "            Ksmallest_labels[j,i] = Ksmallest_labels[j,i] + training_lables[Ksmallest_distances_indices[j,i]]\n",
+    "  \n",
+    "  \n",
+    "    #predicted label: most frequent label in k smallest distances'label\n",
+    "    #argmax(array, axis = None, out = None) : Returns indices of the max element of the array in a particular axis\n",
+    "    #bincount: Count number of occurrences of each value in array of non-negative ints.\n",
+    "    predicted_labels = []\n",
+    "    for i in range(0,2500):\n",
+    "        a = Ksmallest_labels[:,i].astype(int)\n",
+    "        predicted_labels.append(np.bincount(a).argmax())\n",
+    "  \n",
+    "\n",
+    "    #comparing our result and calculating accuracy\n",
+    "    a = 0\n",
+    "    for i in range(0,2500):\n",
+    "        if predicted_labels[i] == validation_labels[i]:\n",
+    "            a = a + 1\n",
+    "  \n",
+    "    accuracy = a/2500\n",
+    "  \n",
+    "    return (accuracy)\n"
+   ]
   }
  ],
  "metadata": {
