--- a/ipynb/Ciffar-image-Classification.ipynb
+++ b/ipynb/Ciffar-image-Classification.ipynb
@@ -207,7 +207,7 @@
     "Acc = []\n",
     "for i in range(1,21):\n",
     "\n",
-    "    Acc.append(KfoldValidation(distances = distances_1,training_lables = label_set_1, validation_labels = validate_1_label,k=i))\n",
+    "    Acc.append(KfoldValidation(distances = distances_1,training_lables = training_labels_1, validation_labels = validation_labels_1,k=i))\n",
     "\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
@@ -223,12 +223,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normdistances_1 = DistanceCalculationWithNormalizationValidation(data_set_1,validate_1)\n",
+    "normdistances_1 = DistanceCalculationWithNormalizationValidation(training_data_1, validation_data_1)\n",
     "Acc = []\n",
     "\n",
     "for i in range(1,21):\n",
     "    \n",
-    "    Acc.append(KfoldValidation(normdistances_1, label_set_1, validate_1_label, i))\n",
+    "    Acc.append(KfoldValidation(distances = normdistances_1,training_lables = training_labels_1, validation_labels = validation_labels_1,k=i))\n",
     "\n",
     "    \n",
     "plt.figure(figsize=(10,6))\n",
@@ -244,11 +244,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances_2 = DistanceCalculationValidation(data_set_2,validate_2)\n",
+    "distances_2 = DistanceCalculationValidation(training_data_2,validation_data_2)\n",
     "Acc = []\n",
     "\n",
     "for i in range(1,21):\n",
-    "    Acc.append(KfoldValidation(distances_2, label_set_2, validate_2_label, i))\n",
+    "    Acc.append(KfoldValidation(distances_2, training_labels_2, validation_labels_2, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -263,11 +263,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normdistances_2 = DistanceCalculationWithNormalizationValidation(data_set_2,validate_2)\n",
+    "normdistances_2 = DistanceCalculationWithNormalizationValidation(training_data_2,validation_data_2)\n",
     "Acc = []\n",
     "\n",
     "for i in range(1,21):\n",
-    "    Acc.append(KfoldValidation(normdistances_2, label_set_2, validate_2_label, i))\n",
+    "    Acc.append(KfoldValidation(normdistances_2, training_labels_2, validation_labels_2, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -282,11 +282,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances_3 = DistanceCalculationValidation(data_set_3,validate_3)\n",
+    "distances_3 = DistanceCalculationValidation(training_data_3,validation_data_3)\n",
     "Acc = []\n",
     "\n",
     "for i in range(1,21):\n",
-    "    Acc.append(KfoldValidation(distances_3, label_set_3, validate_3_label, i))\n",
+    "    Acc.append(KfoldValidation(distances_3, training_labels_3, validation_labels_3, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -301,10 +301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normdistances_3 = DistanceCalculationWithNormalizationValidation(data_set_3,validate_3)\n",
+    "normdistances_3 = DistanceCalculationWithNormalizationValidation(training_data_3,validation_data_3)\n",
     "Acc = []\n",
     "for i in range(1,21):\n",
-    "    Acc.append(KfoldValidation(normdistances_3, label_set_3, validate_3_label, i))\n",
+    "    Acc.append(KfoldValidation(normdistances_3, training_labels_3, validation_labels_3, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -319,10 +319,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances_4 = DistanceCalculationValidation(data_set_4,validate_4)\n",
+    "distances_4 = DistanceCalculationValidation(training_data_4,validation_data_4)\n",
     "Acc = []\n",
     "for i in range(1,21):\n",
-    "    Acc.append(KfoldValidation(distances_4, label_set_4, validate_4_label, i))\n",
+    "    Acc.append(KfoldValidation(distances_4, training_labels_4, validation_labels_4, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normdistances_4 = DistanceCalculationWithNormalizationValidation(data_set_4,validate_4)\n",
+    "normdistances_4 = DistanceCalculationWithNormalizationValidation(training_data_4,validation_data_4)\n",
     "Acc = []\n",
     "for i in range(1,21):\n",
     "    Acc.append(KfoldValidation(normdistances_4, label_set_4, validate_4_label, i))\n",
@@ -355,10 +355,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances_5 = DistanceCalculationValidation(data_set_5,validate_5)\n",
+    "distances_5 = DistanceCalculationValidation(training_data_5,validation_data_5)\n",
     "Acc = []\n",
     "for i in range(1,21):\n",
-    "    Acc.append(KfoldValidation(distances_5, label_set_5, validate_5_label, i))\n",
+    "    Acc.append(KfoldValidation(distances_5, training_labels_5, validation_labels_5, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -373,11 +373,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normdistances_5 = DistanceCalculationWithNormalizationValidation(data_set_5,validate_5)\n",
+    "normdistances_5 = DistanceCalculationWithNormalizationValidation(training_data_5,validation_data_5)\n",
     "Acc = []\n",
     "for i in range(1,21):\n",
     "    \n",
-    "    Acc.append(KfoldValidation(normdistances_5, label_set_5, validate_5_label, i))\n",
+    "    Acc.append(KfoldValidation(normdistances_5, training_labels_5, validate_5_label, i))\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(range(1,21), Acc, color=\"blue\", linestyle=\"dashed\", marker=\"o\", markerfacecolor=\"red\", markersize=10)\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,20 +453,30 @@
     "    #argmax(array, axis = None, out = None) : Returns indices of the max element of the array in a particular axis\n",
     "    #bincount: Count number of occurrences of each value in array of non-negative ints.\n",
     "    predicted_labels = []\n",
-    "    for i in range(0,2500):\n",
+    "    for i in range(0,10000):\n",
     "        a = Ksmallest_labels[:,i].astype(int)\n",
     "        predicted_labels.append(np.bincount(a).argmax())\n",
     "  \n",
     "\n",
     "    #comparing our result and calculating accuracy\n",
     "    a = 0\n",
-    "    for i in range(0,2500):\n",
+    "    for i in range(0,50000):\n",
     "        if predicted_labels[i] == validation_labels[i]:\n",
     "            a = a + 1\n",
     "  \n",
-    "    accuracy = a/2500\n",
+    "    accuracy = a/10000\n",
     "  \n",
     "    return (accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances_test = DistanceCalculationValidation(training_data_final,test_data)\n",
+    "normalized_distance_test = DistanceCalculationWithNormalizationValidation(training_data_final,test_data)"
    ]
   }
  ],
